# opentelemetry-wasi

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Justfile  Makefile  README.md  componentize-go.toml  go.mod  go.sum  tests.sh
.github/workflows/: ci.yaml
examples/exporter/: README.md
examples/exporter/opentelemetry/: Cargo.toml  spin.toml
examples/exporter/opentelemetry/src/: lib.rs
examples/exporter/spin/: Cargo.toml  spin.toml
examples/exporter/tracing/: Cargo.toml  spin.toml
examples/exporter/tracing-spin/: Cargo.toml
examples/exporter/tracing-spin/src/: lib.rs
examples/processor/: README.md
examples/processor/opentelemetry/: Cargo.toml  spin.toml
examples/processor/opentelemetry/src/: lib.rs
examples/processor/tracing/: Cargo.toml  spin.toml
examples/processor/tracing/src/: lib.rs
examples/span/: README.md
examples/span/opentelemetry/: Cargo.toml  spin.toml
examples/span/tracing/: Cargo.toml  spin.toml
examples/span/tracing/src/: lib.rs
examples/spin/: Cargo.toml  spin.toml
examples/spin/src/: lib.rs
examples/tracing-spin/: Cargo.toml  spin.toml
examples/tracing-spin/src/: lib.rs
go/: Makefile  README.md  componentize-go.toml  conversion.go  go.mod  go.sum  processor.go  propagation.go
go/examples/bare-bones-wasi/: Makefile
go/examples/spin-basic/: .gitignore  go.mod  go.sum  main.go  spin.toml
go/examples/spin-basic/wit/: world.wit
go/internal/wasi_clocks_monotonic_clock/: wit_bindings.go
go/internal/wasi_clocks_wall_clock/: wit_bindings.go
go/internal/wasi_io_poll/: wit_bindings.go
go/internal/wasi_otel_logs/: wit_bindings.go
go/internal/wasi_otel_metrics/: wit_bindings.go
go/internal/wasi_otel_tracing/: wit_bindings.go
go/internal/wasi_otel_types/: empty.s  wit_bindings.go
go/internal/wit_exports/: wit_exports.go
go/logs/: conversions.go  conversions_test.go  logs.go
go/metrics/: conversions.go  metrics.go
go/tracing/: conversions.go  tracing.go
go/types/: conversions.go
go/wasip1/: Makefile  README.md  go.mod  go.sum
go/wasip1/examples/spin-basic/: go.mod  go.sum  main.go
go/wasip1/traces/: processor.go  propagation.go  sdk-version-go.c  traces.c  traces.h  utils-free.go  utils-types-primitive.go  utils-types.go
go/wasip1/tracing/: processor.go  propagation.go  tracing.c  tracing.h  utils-types-primitive.go  utils-types.go
go/wasip1/wit/: traces.wit
go/wasip2/: Makefile  README.md  conversion.go  go.mod
go/wasip2/examples/spin-basic/: go.mod  go.sum  main.go  spin.toml
go/wasip2/wit/: tracing.wit  world.wit
go/wit/: metrics.wit  world.wit
go/wit_component/: go.mod  wit_bindings.go
go/wit_component/wasi_clocks_monotonic_clock/: wit_bindings.go
go/wit_component/wasi_clocks_wall_clock/: wit_bindings.go
go/wit_component/wasi_io_poll/: wit_bindings.go
go/wit_component/wasi_otel_logs/: wit_bindings.go
go/wit_component/wasi_otel_metrics/: wit_bindings.go
go/wit_component/wasi_otel_tracing/: wit_bindings.go
go/wit_component/wasi_otel_types/: wit_bindings.go
go/wit_component/wit_runtime/: wit_runtime.go
go/wit_component/wit_types/: wit_option.go  wit_result.go  wit_tuples.go  wit_unit.go
integration_tests/: Cargo.toml  Dockerfile.base
integration_tests/src/: lib.rs
integration_tests/src/snapshots/: integration_tests__tests__go_spin_basic_logs.snap  integration_tests__tests__go_spin_basic_metrics.snap  integration_tests__tests__go_spin_basic_tracing.snap  integration_tests__tests__rust_spin_basic_logs.snap  integration_tests__tests__rust_spin_basic_metrics.snap  integration_tests__tests__rust_spin_basic_tracing.snap  integration_tests__tests__rust_spin_tracing_logs.snap  integration_tests__tests__rust_spin_tracing_tracing.snap  integration_tests__tests__typescript_spin_basic_logs.snap  integration_tests__tests__typescript_spin_basic_metrics.snap  integration_tests__tests__typescript_spin_basic_tracing.snap
rust/: Cargo.toml  README.md
rust/crates/logging/: Cargo.toml
rust/crates/logging/src/: conversion.rs  lib.rs  processor.rs
rust/crates/logs/: Cargo.toml
rust/crates/logs/src/: conversion.rs  lib.rs
rust/crates/metrics/: Cargo.toml
rust/crates/metrics/src/: conversion.rs  exporter.rs  lib.rs
rust/crates/tracing/: Cargo.toml
rust/crates/tracing/src/: conversion.rs  lib.rs  processor.rs  propagation.rs
rust/examples/not-wasm/: Cargo.toml
rust/examples/not-wasm/src/: main.rs
rust/examples/spin-basic/: Cargo.toml  spin.toml
rust/examples/spin-basic/src/: lib.rs
rust/examples/spin-logs/: Cargo.toml  spin.toml
rust/examples/spin-logs/src/: lib.rs
rust/examples/spin-metrics/: Cargo.toml  spin.toml
rust/examples/spin-metrics/src/: lib.rs
rust/examples/spin-tracing/: Cargo.toml  spin.toml
rust/examples/spin-tracing/src/: lib.rs
rust/src/: conversion.rs  lib.rs  logs.rs  metrics.rs  processor.rs  propagation.rs  tracing.rs  types.rs
rust/src/logs/: conversion.rs  processor.rs
rust/src/metrics/: conversion.rs  exporter.rs  reader.rs
rust/src/tracing/: conversion.rs  processor.rs  propagation.rs
rust/src/types/: conversion.rs
rust/supply-chain/: config.toml
src/: exporter.rs  lib.rs  processor.rs  propagation.rs  provider.rs  span.rs  tracer.rs
ts/: .prettierignore  Justfile  Makefile  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
ts/__mocks__/: wasi-otel-logs.ts  wasi-otel-types.ts
ts/examples/spin-basic/: README.md  package-lock.json  package.json  spin.toml  tsconfig.json  webpack.config.js
ts/examples/spin-basic/config/: knitwit.json
ts/examples/spin-basic/src/: index.ts
ts/src/: index.ts  logs.test.ts  logs.ts  metrics.ts  tracing.ts  types.ts
ts/types/: wit.d.ts
ts/types/interfaces/: wasi-clocks-monotonic-clock.d.ts  wasi-clocks-wall-clock.d.ts  wasi-io-poll.d.ts  wasi-otel-logs.d.ts  wasi-otel-metrics.d.ts  wasi-otel-tracing.d.ts  wasi-otel-types.d.ts
ts/wit/: tracing.wit  types.wit  world.wit
wit/: logging.wit  logs.wit  metrics.wit  otel-common.wit  tracing.wit  types.wit  world.wit
wit/metrics/: instrument.wit  meter.wit  metric-utils.wit
(+42 files in other folders)
