[package]
name = "opentelemetry-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.84"
opentelemetry = "0.23.0"
opentelemetry_sdk = "0.23.0"
wit-bindgen = "0.24.0"
futures-core = "0.3"
futures-executor = "0.3"
tracing-opentelemetry = "0.24.0"

[workspace]
members = ["examples/exporter/*", "examples/span/*", "examples/processor/*"]
