[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
insta = { version = "1.44.1", features = ["yaml", "redactions"] }
fake-opentelemetry-collector = "0.33"
reqwest = "0.12.24"
sysinfo = "0.37.2"
tokio = "1.48.0"
assert2 = "0.3.16"
serial_test = "3.2.0"
nix = { version = "0.30.1", features = ["signal"] }
