[package]
name = "opentelemetry-wasi"
version = "0.27.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
spin-sdk = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
wit-bindgen = "0.30.0"

[workspace]
members = ["examples/*"]

[workspace.dependencies]
anyhow = "1"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_metrics_custom_reader"] }
spin-sdk = "3.1.0"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"