[package]
name = "spin"
authors = ["Caleb Schoepp <caleb.schoepp@fermyon.com>"]
description = "A Spin app that uses opentelemetry-wasi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk.git", branch = "wasi-observe-prototype" }
opentelemetry = "0.23.0"
opentelemetry_sdk = "0.23.0"
opentelemetry-wasi = { path = "../.." }
