[package]
name = "processor_opentelemetry"
authors = ["Caleb Schoepp <caleb.schoepp@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk.git", rev = "88951f6044042b86ee4a475c513eae325e9d7823" }
opentelemetry = "0.23.0"
opentelemetry_sdk = "0.23.0"
opentelemetry-wasi = { path = "../../.." }
