[package]
name = "tracing"
authors = ["Caleb Schoepp <caleb.schoepp@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { path = "/Users/caleb/src/fermyon/spin-rust-sdk" }
opentelemetry = "0.23.0"
opentelemetry_sdk = "0.23.0"
opentelemetry-wasi = { path = "../../.." }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"]}
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"