[package]
name = "not-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-stdout = { version = "0.28.0", features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"]}
tokio = { version = "1.46.1", features = ["full"] }
