[package]
name = "spin-basic"
authors = ["Caleb Schoepp <caleb.schoepp@fermyon.com>"]
description = "A basic Spin application that directly consumes the opentelemetry-wasi crate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-wasi = { path = "../../" }
spin-sdk = { workspace = true }
