[package]
name = "spin-logs"
authors = ["Andrew Steurer <94206073+asteurer@users.noreply.github.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["logs", "rt-tokio"] }
opentelemetry-wasi = { path = "../../" }
spin-sdk = { workspace = true }
opentelemetry-stdout = { version = "0.28.0", features = ["logs"] }
tracing = "0.1.41"
opentelemetry-appender-tracing = "0.28.1"
tracing-subscriber = "0.3.19"
