[package]
name = "spin-tracing"
authors = ["Caleb Schoepp <caleb.schoepp@fermyon.com>"]
description = "A basic Spin application that uses the opentelemetry-wasi crate along with the very pervasive tracing crate"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true}
opentelemetry_sdk = { workspace = true}
opentelemetry-wasi = { path = "../../" }
spin-sdk = { workspace = true }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
