[package]
name = "spin-tracing"
authors = ["Caleb Schoepp <caleb.schoepp@fermyon.com>"]
description = "A basic Spin application that uses the opentelemetry-wasi crate along with the very pervasive tracing crate"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true}
opentelemetry_sdk = { workspace = true}
opentelemetry-wasi = { path = "../../" }
spin-sdk = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tracing-subscriber = { workspace = true }
